# Data-Science-Projects

./: .gitignore  100_Numpy_exercises_no_solution.ipynb  Flashcard downloader Uday.ipynb  Helpful Functions and codes.ipynb  ML_flashcards.csv  Project idea.docx  README.md  tts_pytorch.ipynb
.ipynb_checkpoints/: GCP Drive to bucket-checkpoint.ipynb
1.1 Python practice/: Python_excercise_1.py  Python_excercise_10.py  Python_excercise_11.py  Python_excercise_12.py  Python_excercise_13.py  Python_excercise_14.py  Python_excercise_2.py  Python_excercise_3.py  Python_excercise_4.py  Python_excercise_5.py  Python_excercise_6.py  Python_excercise_7.py  Python_excercise_8.py  Python_excercise_9.py
10 - Bootstrap random forest/: Bootstrap_random_forest_from_scratch.ipynb
12 - Graph dataset/: movie_actor_network.csv
13 - Recommendation system/: udaylunawat@gmail.com_13.html
18 - Callbacks and Tensorboard/: Call_Backs_Reference.ipynb  data.csv  tensorboard.ipynb
19 - rvl-cdip document classification using Transfer Learning/: Reference.ipynb
8 - Linear models/: task_b.csv  udaylunawat@gmail.com_8B.ipynb.json  udaylunawat@gmail.com_8C.ipynb.json
9 - Decision tree on donor_s choose/: udaylunawat@gmail.com_9.ipynb.json
Applied AI Notes/: Mission Applied AI.docx
Assignment 11 - GBDT donors choose/: udaylunawatgmail.com_11.html  udaylunawatgmail.com_11.ipynb
NotebookLM_clone/PDF2Podcast/: Dockerfile  README.md  colab_notebook.ipynb  colab_notebook_2.ipynb  gradio_app.py  notebook_lm_kokoro.py  podcast_kyutai.ipynb  pyproject.toml  setup_env.sh
Resnet/: README.md
(+89 files in other folders)
