[project]
name = "notebooklm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kokoro>=0.9.2",
    "soundfile",
    "torch",
    "PyPDF2",
    "numpy",
    "openai",
    "ipython",
    "gradio",
    "sphn<=0.2.0",
    "moshi>=0.2.4",
]
